project checked but testing order,coupon and payment is remained